--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,13 @@
         "--load-plugins=pylint_django",
         "--django-settings-module=<folder name>.settings",
     ],
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "driver": "SQLite",
+            "name": "raredb",
+            "database": "db.sqlite3"
+        }
+    ],
     
 }
