--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         {
             "previewLimit": 50,
             "driver": "SQLite",
-            "name": "rare server",
+            "name": "rareapi",
             "database": "db.sqlite3"
         }
     ],
